--- a/ScreenPlay/packages.config
+++ b/ScreenPlay/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.41" targetFramework="net461" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
 </packages>
