--- a/ScreenPlay/ScreenPlay.csproj
+++ b/ScreenPlay/ScreenPlay.csproj
@@ -57,12 +57,12 @@
     <Compile Include="Actions\Click.cs" />
     <Compile Include="Actions\Enter.cs" />
     <Compile Include="Actions\WaitUntil.cs" />
-    <Compile Include="BaseTest.cs" />
-    <Compile Include="EmployeeTest.cs" />
+    <Compile Include="Test\BaseTest.cs" />
+    <Compile Include="Test\EmployeeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tasks\EmployeeForm.cs" />
     <Compile Include="Tasks\Login.cs" />
-    <Compile Include="LoginTest.cs" />
+    <Compile Include="Test\LoginTest.cs" />
     <Compile Include="UI\EmployeeUI.cs" />
     <Compile Include="UI\LoginScreen.cs" />
   </ItemGroup>
