--- a/ScreenPlay/packages.config
+++ b/ScreenPlay/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.10.1" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
-  <package id="Selenium.Chrome.WebDriver" version="79.0.0" targetFramework="net461" />
-  <package id="Selenium.Support" version="3.14.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Selenium.Chrome.WebDriver" version="83.0.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
 </packages>
