--- a/ScreenPlay/packages.config
+++ b/ScreenPlay/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.12.0" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
-  <package id="Selenium.Chrome.WebDriver" version="83.0.0" targetFramework="net461" />
-  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="NUnit" version="3.13.2" targetFramework="net48" />
+  <package id="NUnit3TestAdapter" version="4.1.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Selenium.Support" version="4.0.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver" version="4.0.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="96.0.4664.4500" targetFramework="net48" />
 </packages>
